<resources>
    <string name="app_name">Affaldvarme</string>
    <string name="countdown_default">...</string>
    <string name="progress_image">Images</string>
    <string name="progress_videos">Videos</string>
    <string name="address">Address: </string>
    <string name="receiver">Email: </string>
    <string name="get_started">Open menu to get started</string>
    <string name="no_media_files">No media files</string>
    <plurals name="uploading_n_files">
        <item quantity="one">Uploading 1 file</item>
        <item quantity="other">Uploading %d</item>
    </plurals>
    <string name="progress_memos">Memos</string>
    <string name="recording_memo">Recording memo</string>

    <string name="voice_command_start_program">Heat app</string>
    <string name="start_memo">Dictate memo</string>
    <string name="finish">Finish address</string>
    <string name="take_picture">Take picture</string>
    <string name="record_video">Record video</string>
    <string name="scan_address">Scan address</string>
    <string name="scan_new_address">Scan new address</string>
    <string name="create_breakdown">Create breakdown</string>
    <string name="sending_report">Sending report</string>
    <string name="notify">Notify by email</string>
    <string name="picture_help_text">Tap to take picture</string>
    <string name="video_help_text">Tap to stop recording</string>
    <string name="call">Make call</string>
    <string name="calling_name_phone">Calling %1$s (%2$s)</string>
    <string name="qr_code_scanned">QR code scanned</string>
    <string name="scanning_qr_code">Scanning QR code</string>
    <string name="no_camera">The camera is not available</string>
    <string name="file_uploaded">File uploaded</string>
    <string name="error_uploading_file">Error uploading file</string>
    <string name="uploading_file">Uploading file</string>
    <string name="event_created">Event created</string>
    <string name="email_sent">Email sent</string>
    <string name="cannot_read_configuration_file">Cannot read configuration file</string>
</resources>
