<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Use the constants defined in the ContextualMenus.Command enum-->
    <group
        android:id="@+id/main_menu_group_main">
        <item
            android:id="@+id/take_image_menu_item"
            android:title="@string/take_image" />
        <item
            android:id="@+id/record_video_menu_item"
            android:title="@string/record_video" />
        <item
            android:id="@+id/notify_menu_item"
            android:title="@string/notify" />
        <item
            android:id="@+id/scan_new_adress_menu_item"
            android:title="@string/scan_new_address" />
        <item
            android:id="@+id/make_call_menu_item"
            android:title="@string/call">
            <menu>
                <item
                    android:id="@+id/contacts_menu_item"
                    android:orderInCategory="-1"
                    android:visible="false"/>
            </menu>
        </item>
        <item
            android:id="@+id/finish_menu_item"
            android:title="@string/finish" />
    </group>
    <group
        android:id="@+id/main_menu_group_start">
        <item
            android:id="@+id/scan_address_menu_item"
            android:title="@string/scan_address" />
        <item
            android:id="@+id/create_breakdown_menu_item"
            android:title="@string/create_breakdown" />
    </group>
</menu>